<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hobbyer</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Already have an account? Login</string>
    <string name="tutorial_screen">Tutorial</string>
    <string name="find_your_city">Find Your City</string>
    <string name="your_city_status">Our Studios and Classes vary by city. What neighbourhood will you be working out in?</string>
    <string name="current_location">Use My Current Location</string>
    <string name="address">Address or City</string>
    <string name="facebook_login">Continue with Facebook</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="login"><u>LOGIN</u></string>
    <string name="logins">LOGIN</string>
    <string name="new_user">New User?</string>
    <string name="sing_up">  Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="conf_password">Confirm password</string>
    <string name="forget_passwords">Forgot Password</string>
    <string name="passwords">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Camera</string>
    <string name="please_wait_">Please Wait…</string>
    <string name="agree">I agree to  the <u>Terms &amp; Services</u></string>
    <string name="msg_network_error">Please check your internet connection</string>
    <string name="already">Already User?</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="location_client_is_connected" tools:ignore="TypographyEllipsis">Location client is connected...</string>
    <string name="location_client_is_going_to_connect" tools:ignore="TypographyEllipsis">Location client is going to connected...</string>
    <string name="start_update" tools:ignore="TypographyEllipsis">Iniciar la actualización...</string>
    <string name="start_periodics_updates" tools:ignore="TypographyEllipsis">start periodic updates...</string>
    <string name="on_connected" tools:ignore="TypographyEllipsis">on connected...</string>
    <string name="connection_suspended">Conexión suspendida</string>
    <string name="unable_to_fetch_current_location">No se puede recuperar la ubicación actual</string>
    <string name="on_connection_failed" tools:ignore="TypographyEllipsis">on connection Failed...</string>
    <string name="on_location_changed" tools:ignore="TypographyEllipsis">on location changed...</string>
    <string name="enter_mail">We are not available at your location right now  </string>
    <string name="please_otp">Please enter your OTP number.</string>
    <string name="rest_otp"><u>Resend OTP</u></string>
    <string name="reset_password">Reset your password</string>
    <string name="new_password">New Password</string>
    <string name="phone">Phone Number</string>
    <string name="sent">SENT</string>
    <string name="pasts">Pasts(10)</string>
    <string name="favourites">Favourites(10)</string>
    <string name="friends">Friends(10)</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="block">Block</string>
    <string name="facebook_app_id">759844201064339</string>
    <string name="phone_number">Enter Your Register Phone number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_enter_first_name">*Please enter first name.</string>
    <string name="please_enter_valid_name">*Please enter valid name.</string>
    <string name="please_enter_last_name">*Please enter last name.</string>
    <string name="please_enter_email">*Please enter email.</string>
    <string name="please_enter_different_email">*Please enter different email.</string>
    <string name="please_enter_help">*Please Enter Help.</string>
    <string name="please_enter_Subject">*Please Enter Subject.</string>
    <string name="please_enter_description">*Please enter description.</string>
    <string name="please_enter_valid_email">*Please enter valid email.</string>
    <string name="please_enter_password">*Please enter password.</string>
    <string name="please_enter_valid_password">*Password must contain at least 8 characters.</string>
    <string name="please_enter_confirm_password">*Please enter confirm password.</string>
    <string name="please_enter_valid_confirm_password">*Password and confirm password should be same.</string>
    <string name="password_mismatch">Both password should be same</string>
    <string name="add_friends">Add Friends</string>
    <string name="sing_up_login">\u0020<u> Sign Up</u></string>
    <string name="forgot">Forgot Password</string>
    <string name="rest">Reset Password</string>
    <string name="faq_t">FAQ</string>
    <string name="free">Free Trail</string>
    <string name="review_screen">Review</string>
    <string name="how_do_text">Lorem ipsum dolor sit amet, consectetur adipisc
ing elit. Aenean euismod bibendum laoreet. Pro
in gravida dolor sit amet lacus accumsan et viverr
a justo commodo. Proin sodales pulvinar tempor.
Cum sociis natoque penatibus et magnis dis part
urient montes, nascetur ridiculus mus. Nam ferm
entum, nulla luctus pharetra vulputate, felis tellus
mollis orci, sed rhoncus sapien nunc eget</string>
    <string name="home">Home</string>
    <string name="find_class">Find a Class</string>
    <string name="video">Browse Video</string>
    <string name="upcoming">Upcoming</string>
    <string name="toprating">Top Rating Class</string>
    <string name="profile">Profile </string>
    <string name="refer">Refer and Earn</string>
    <string name="setting">Settings</string>
    <string name="booking">Top Rating Studios</string>
    <string name="Logout">Logout</string>
    <string name="account">Account</string>
    <string name="saswati_padhi">Saswati Padhi</string>
    <string name="padhi_saswati_gmail_com">padhi.saswati@gmail.com</string>
    <string name="manage_contact_information">Manage billing Information </string>
    <string name="privacy">Privacy</string>
    <string name="manage_privacy_settings">Manage Privacy Settings</string>
    <string name="membership">Membership</string>
    <string name="your_current_plan">Your Current Plan</string>
    <string name="next_cycle_beings_feb_2">Next cycle beings Feb 2</string>
    <string name="_100_of_45_credits">100% of 45 Credits</string>
    <string name="_45_credits_per_month_3_visits_to_each_studio_per_month">45 Credits per month 3 visits to each studio per month</string>
    <string name="add_points_to_your_cycle">Add points to your cycle</string>
    <string name="manage_your_plan">Manage your plan</string>
    <string name="billing">Billing</string>
    <string name="manage_contact_information1">Manage Contact Information</string>
    <string name="see_recent_charges">See Recent Charges</string>
    <string name="support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_poilicy">Privacy Policy</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="common">Common Questions</string>
    <string name="how_do">How do I book classes using credits?</string>
    <string name="how_can">Can I pause my membership?</string>
    <string name="search">Search</string>
    <string name="trialText1">You get 45 credits to book whatever classes you want . Trial begins the day you activate.</string>
    <string name="trialText2">Book classes at any studio in our network. Credit rates vary by class.</string>
    <string name="trialText3">If you`re not loving it, cancel anytime during your trial and you won`t changed.</string>
    <string name="logout">Logout</string>
    <string name="are_you">Are you sure you want to log out from \n the application?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="location_title">Confirm Location</string>
    <string name="confirm">Confirm</string>
    <string name="update_details">Update my account details</string>
    <string name="email_different">Your Class Pass email address(If different)</string>
    <string name="help">How can we help?</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="attachment">Attachment</string>
    <string name="please_choice_your_issue_below">Please choose your issue below</string>
    <string name="submit_a_request">Submit a request</string>
    <string name="comming">Coming Soon</string>
    <string name="er_email">*Please enter valid email.</string>
    <string name="er_password">*Please enter valid password.</string>
    <string name="privacy_agree">You agree to the<b><u>Terms of Use and</u></b></string>
    <string name="add_point">Add Point</string>
    <string name="manage_plan">Manage Your Plan</string>
    <string name="rewards">450 points</string>
    <string name="name">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="manage_billing_information">Manage billing information</string>
    <string name="faqtool">FAQ</string>
    <string name="member_name">Member Name</string>
    <string name="name_zyno">Zyno Yang</string>
    <string name="date">Date</string>
    <string name="date_format">1/3/2018 To 1/3/2019</string>
    <string name="recent_charges">Recent Charges</string>
    <string name="recent_charges_format">1/3/2019</string>
    <string name="text">Los angeles/Orange Country 20 points pack$5.00 </string>
    <string name="print_page">PRINT PAGE</string>
    <string name="share">Share</string>
    <string name="invitation">Invite a Friend on Hobbyer</string>
    <string name="start_time">Start Time</string>
    <string name="_4_00_am_to_11_00_pm">4:00am to 11:00pm</string>
    <string name="points">Points</string>
    <string name="_20_to_30_points">20 to 30 points</string>
    <string name="location">Location</string>
    <string name="london">London</string>
    <string name="activity">Activity</string>
    <string name="recent_charge">Recent Charges</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="refine_search">Refine Search</string>
    <string name="clear_all">Clear All</string>
    <string name="gym_time">Gym Time</string>
    <string name="we_re_not_in_your_city">We\'re not in your city.</string>
    <string name="messageEmail">If you\'d like us to email when\nHobbyer is available near you, and to\n get offers, promos and similar \n communications, enter your email. \n Unsubscribe any time.</string>
    <string name="keepme">Keep me updated</string>
    <string name="purchase_pan">Purchase more points without charging your monthly plan with this one-time addition. If you don\'t use all of your points, up to 100 points will roll over to your next month</string>
    <string name="_100_off_450_points">100%off 450 points</string>
    <string name="add_more_points">Add more points</string>
    <string name="golds_gym_wintergreen_plaza">Golds Gym-wintergreen Plaza</string>
    <string name="total_amount">Total Amount</string>
    <string name="_60_points">60 Points</string>
    <string name="confirm_reservation">confirm Reservation</string>
    <string name="please_note_this_class_occours_within">Please note this class occours within</string>
    <string name="_12_hours_and_cancellation">12 hours and cancellation</string>
</resources>