<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="160dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/city_dp_20"
        android:layout_marginRight="@dimen/city_dp_20"
        android:orientation="vertical">
    <com.hobbyer.android.widgets.MyTextView
        android:id="@+id/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_17"
        android:text="@string/logout"/>

    <com.hobbyer.android.widgets.MyTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/are_you"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_dp_40"


            android:orientation="horizontal"
            android:paddingTop="8dp">





            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:layout_marginLeft="@dimen/city_dp_10"
                android:gravity="left|center"
                android:layout_marginRight="@dimen/city_dp_10"
                android:orientation="vertical">

                <com.hobbyer.android.widgets.MyTextView
                    android:id="@+id/btYes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/ok"/>
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:layout_marginLeft="@dimen/city_dp_10"
                android:gravity="right|center_vertical"

                android:orientation="vertical"
                android:paddingLeft="5dp">

                <com.hobbyer.android.widgets.MyTextView
                    android:id="@+id/btNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@color/bittersweet"
                    android:text="@string/cancel"/>
            </LinearLayout>



    </LinearLayout>
    </LinearLayout>
</RelativeLayout>