<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hobbyer.android.viewmodel.activity.addpontviewmodel.AddPointsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.activities.settings.AddPointsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">
                <com.hobbyer.android.widgets.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/add_more_points"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:font_name="monSemibold"/>

                <com.hobbyer.android.widget.customfonts.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:padding="@dimen/dp_10"
                    android:background="@drawable/bg_row"
                    android:lineSpacingExtra="2pt"
                    android:textColor="@color/black"
                    android:text="@string/purchase_pan" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvAddPoints"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/city_dp_5"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/city_dp_5"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <com.hobbyer.android.widgets.MyTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/your_current_plan"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:font_name="monRegular"/>

                    <com.hobbyer.android.widgets.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:text="@string/_100_off_450_points"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:font_name="monRegular"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>